clash/src/tui/snapshots/clash__tui__render__tests__snapshot_add_rule_overlay.snap
---
source: clash/src/tui/render.rs
expression: output
---
 clash tui  user  1/4                                                    ? help 
│ ▶ "git"  1 auto allow                                                        │
│ ▶ "rm"  1 auto deny                                                          │
│ ▶ "sudo"  1 ask                                                              │
│ ▶ *  1 auto allow · 1 auto deny · 1 ask                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│          ┌ Add Rule ──────────────────────────────────────────────┐          │
│          │ 1. Command                                             │          │
│          │   > _                                                  │          │
│          │   e.g. cargo, *, blank=any command                     │          │
│          │                                                        │          │
│          │ 2. Args                                                │          │
│          │   (empty)                                              │          │
│          │                                                        │          │
│          │ 3. Domain                                              │          │
│          │    exec    fs    net    tool                           │          │
│          │                                                        │          │
│          │ 4. Permissions                                         │          │
│          │   (covered by command + args)                          │          │
│          │                                                        │          │
│          │ 5. Effect                                              │          │
│          │    allow    deny    ask                                │          │
│          │                                                        │          │
│          │ 6. Level                                               │          │
│          │    user                                                │          │
│          └────────────────────────────────────────────────────────┘          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
┌──────────────────────────────────────────────────────────────────────────────┐
│Binary: "git"                                                                 │
│1 rule: 1 auto allow                                                          │
│"git"                                                                         │
│                                                                              │
j/k move  l expand  z/Z fold  Tab effect  e edit  d delete  [/] all  a add  / se
