clash/src/tui/snapshots/clash__tui__render__tests__snapshot_edit_rule_mode.snap
---
source: clash/src/tui/render.rs
expression: output
---
 clash tui  user  24/24                                                  ? help 
│       ▼ Exec                                                                 │
│           auto deny   [user:main]                                            │
│ ▼ "sudo"                                                                     │
│   ▼ *                                                                        │
│     ▼ Exec                                                                   │
│         ask         [user:main]                                              │
│ ▼ *                                                                          │
│ │ ▼ subpath ${PWD}                                                           │
│ │   ▼ read                                                                   │
│ │     ▼ Filesystem                                                           │
│ │         auto allow  [user:main]                                            │
│ │ ▼ "evil.com"                                                               │
│ │   ▼ Network                                                                │
│ │       auto deny   [user:main]                                              │
│   ▼ "Bash"                                                                   │
│     ▼ Tool                                                                   │
│         ask         [user:main]                                              │
┌──────────────────────────────────────────────────────────────────────────────┐
│Edit rule: Enter confirm  Esc cancel                                          │
│> (ask (tool "Bash"))_                                                        │
│                                                                              │
│                                                                              │
j/k move  Tab effect  e edit  E edit rule  x delete  [/] all  a add  / search  w
