clash/src/tui/snapshots/clash__tui__render__tests__snapshot_empty_policy.snap
---
source: clash/src/tui/render.rs
expression: output
---
 clash tui  user                                                         ? help 
│  No policy rules loaded. Run `clash init` to create a policy.                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
┌──────────────────────────────────────────────────────────────────────────────┐
│No selection                                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
j/k move  [/] all  a add  / search  w save  ? help  q quit
