clash/src/tui/snapshots/clash__tui__render__tests__snapshot_expanded_tree.snap
---
source: clash/src/tui/render.rs
expression: output
---
 clash tui  user  1/24                                                   ? help 
│ ▼ "git"                                                                      │
│   ▼ *                                                                        │
│     ▼ Exec                                                                   │
│         auto allow  [user:main]                                              │
│ ▼ "rm"                                                                       │
│   ▼ "-rf"                                                                    │
│     ▼ *                                                                      │
│       ▼ Exec                                                                 │
│           auto deny   [user:main]                                            │
│ ▼ "sudo"                                                                     │
│   ▼ *                                                                        │
│     ▼ Exec                                                                   │
│         ask         [user:main]                                              │
│ ▼ *                                                                          │
│ │ ▼ subpath ${PWD}                                                           │
│ │   ▼ read                                                                   │
│ │     ▼ Filesystem                                                           │
┌──────────────────────────────────────────────────────────────────────────────┐
│Binary: "git"                                                                 │
│1 rule: 1 auto allow                                                          │
│"git"                                                                         │
│                                                                              │
j/k move  h collapse  z/Z fold  Tab effect  e edit  x delete  [/] all  a add  /
