clash/src/tui/snapshots/clash__tui__render__tests__snapshot_help_overlay.snap
---
source: clash/src/tui/render.rs
expression: output
---
 clash tui  user  1/4                                                    ? help 
│ ▶ "git"  1 auto allow                                                        │
│ ▶ "rm"  1 aut┌ Keyboard Shortcuts ────────────────────────────┐              │
│ ▶ "sudo"  1 a│                                                │              │
│ ▶ *  1 auto a│  j / Down    Move cursor down                  │              │
│              │  k / Up      Move cursor up                    │              │
│              │  l / Right   Expand node or enter children     │              │
│              │  h / Left    Collapse node or go to parent     │              │
│              │  Enter       Expand node or enter children     │              │
│              │  Space       Toggle expand/collapse            │              │
│              │  g           Jump to top                       │              │
│              │  G           Jump to bottom                    │              │
│              │  u / PgUp    Page up                           │              │
│              │  d / PgDn    Page down                         │              │
│              │                                                │              │
│              │  Tab         Select effect (dropdown)          │              │
│              │  e           Edit node value inline            │              │
│              │  E           Edit full rule s-expr             │              │
│              │  a           Add a new rule                    │              │
│              │  x           Delete rule at cursor             │              │
│              │  w           Save all changes                  │              │
│              │  Ctrl+z      Undo last edit                    │              │
│              │  Ctrl+r      Redo                              │              │
│              │                                                │              │
│              │  z           Fold/unfold children              │              │
│              │  Z           Fold/unfold subtree               │              │
│              │  [           Collapse all                      │              │
│              │  ]           Expand all                        │              │
│              │                                                │              │
│              │  /           Search                            │              │
│              │  n / N       Next / previous match             │              │
│              │  Esc         Clear search / quit               │              │
│              │  ?           Toggle this help                  │              │
│              │  q           Quit (confirms if unsaved)        │              │
┌──────────────│                                                │──────────────┐
│Binary: "git" │  Press any key to close                        │              │
│1 rule: 1 auto└────────────────────────────────────────────────┘              │
│"git"                                                                         │
│                                                                              │
j/k move  l expand  z/Z fold  Tab effect  e edit  x delete  [/] all  a add  / se
