clash/src/tui/snapshots/clash__tui__render__tests__snapshot_multi_level.snap
---
source: clash/src/tui/render.rs
expression: output
---
 clash tui  user + project  1/8                                          ? help 
│ ▼ "git"                                                                      │
│ │ ▼ *                                                                        │
│ │   ▼ Exec                                                                   │
│ │       auto allow  [user:main]  [shadowed]                                  │
│   ▼ "push"                                                                   │
│     ▼ *                                                                      │
│       ▼ Exec                                                                 │
│           auto deny   [project:main]                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
┌──────────────────────────────────────────────────────────────────────────────┐
│Binary: "git"                                                                 │
│2 rules: 1 auto allow, 1 auto deny                                            │
│"git"                                                                         │
│                                                                              │
j/k move  h collapse  z/Z fold  Tab effect  e edit  x delete  [/] all  a add  /
