clash/src/tui/snapshots/clash__tui__render__tests__snapshot_sandbox_expanded.snap
---
source: clash/src/tui/render.rs
expression: output
---
 clash tui  user  1/15                                                   ? help 
│ ▼ "ls"                                                                       │
│   ▼ "-lha"                                                                   │
│     ▼ Exec                                                                   │
│       ▼ ask         [user:main]  sandboxed                                   │
│         ▼ Sandbox                                                            │
│         │ ▼ read                                                             │
│         │   ▼ Filesystem                                                     │
│         │       auto allow  [sandbox]                                        │
│           ▼ Network                                                          │
│               auto deny   [sandbox]                                          │
│ ▼ "cargo"                                                                    │
│   ▼ *                                                                        │
│     ▼ Exec                                                                   │
│       ▼ auto allow  [user:main]  sandbox: "cargo-env"                        │
│           sandbox: "cargo-env"                                               │
│                                                                              │
│                                                                              │
┌──────────────────────────────────────────────────────────────────────────────┐
│Binary: "ls"                                                                  │
│1 rule: 1 ask                                                                 │
│"ls"                                                                          │
│                                                                              │
j/k move  h collapse  z/Z fold  Tab effect  e edit  x delete  [/] all  a add  /
