clash/src/tui/snapshots/clash__tui__render__tests__snapshot_save_diff_overlay.snap
---
source: clash/src/tui/render.rs
expression: output
---
 clash tui  user [modified]  16/27                                       ? help 
│ ▼ "rm"                                                                       │
│   ▼ "-┌ Review Changes ──────────────────────────────────────────────┐       │
│     ▼ │  user policy: /tmp/test                                      │       │
│       │    (policy "main"                                            │       │
│       │      (allow (exec "git" *))                                  │       │
│ ▼ "sud│      (deny (exec "rm" "-rf" *))                              │       │
│   ▼ * │      (ask (exec "sudo" *))                                   │       │
│     ▼ │      (allow (fs read (subpath (env PWD))))                   │       │
│       │      (deny (net "evil.com"))                                 │       │
│ ▼ "car│      (ask (tool "Bash"))                                     │       │
│   ▼ Ex│  +   (allow (exec "cargo"))                                  │       │
│       │    )                                                         │       │
│ ▼ *   │                                                              │       │
│ │ ▼ su│                                                              │       │
│ │   ▼ │                                                              │       │
│ │     │                                                              │       │
│ │     │                                                              │       │
│ │ ▼ "e│                                                              │       │
│ │   ▼ │                                                              │       │
│ │     │                                                              │       │
│   ▼ "B│                                                              │       │
│     ▼ │                                                              │       │
│       │                                                              │       │
┌───────│                                                              │───────┐
│AUTO AL│                                                              │       │
│Source:│  Save? y confirm  n/Esc cancel  j/k scroll  g/G top/bottom   │       │
│Rule: (└──────────────────────────────────────────────────────────────┘       │
│"cargo" > Exec > allow                                                        │
j/k move  Tab effect  e edit  E edit rule  d delete  [/] all  a add  / search  w
