clash/src/tui/snapshots/clash__tui__render__tests__snapshot_shadowed_rule.snap
---
source: clash/src/tui/render.rs
expression: output
---
 clash tui  user + project  4/5                                          ? help 
│ ▼ "git"                                                                      │
│   ▼ *                                                                        │
│     ▼ Exec                                                                   │
│     │   auto allow  [user:main]  [shadowed]                                  │
│         auto deny   [project:main]                                           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
┌──────────────────────────────────────────────────────────────────────────────┐
│AUTO ALLOW Allow running "git" (any args)                                     │
│Source: main [user]                                                           │
│ID: ab4965c                                                                   │
│Rule: (allow (exec "git" *)                                                   │
j/k move  Tab effect  e edit  E edit rule  x delete  [/] all  a add  / search  w
